# rag-actions

./: Dockerfile  README.md  entrypoint.sh  mypy.ini  pyproject.toml  test.py
.github/actions/infer-chat/: action.yml
.github/actions/ingest-directory/: action.yml
.github/actions/ingest-loader/: action.yml
.github/actions/ingest-text/: action.yml
.github/actions/query-search/: action.yml
.github/actions/query-template/: action.yml
.github/actions/query-test/: action.yml
.github/actions/rag-indexer/: action.yml
.github/actions/testing-loader/: action.yml
.github/actions/transform-template/: action.yml
.github/workflows/: black.yml  docker.yml  example.yml  flake8.yml  mypy.yml  test-infer.yml  test-ingest.yml  test-query.yml  test-testing.yml  test-transform.yml  test.yml
docs/: test.md
rag_action/: __main__.py  config.py  constants.py  github.py  rag.py  supabase.py  utils.py
rag_action/infer/: chat.py
rag_action/ingest/: directory.py  loader.py  text.py
rag_action/query/: search.py  template.py  test.py
rag_action/testing/: loader.py
rag_action/transform/: template.py
supabase/: setup.sql  table.sql
test/content/: test.md
test/content/skills/: terraform.md
test/content/skills/devops/: ansible.md  kubernetes.md  terraform.md
