[tool.poetry]
name = "rag_action"
version = "0.1.0"
description = "RAG GitHub Actions"
authors = ["Louis King <jinglemansweep@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.82.1"
langchain = "^0.3.25"
supabase = "^2.15.2"
pymupdf = "^1.26.0"
requests = "^2.32.3"
langchain-community = "^0.3.24"
tiktoken = "^0.9.0"
langchain-openai = "^0.3.18"
types-requests = "^2.32.0.20250515"
jinja2 = "^3.1.6"
pydantic = "^2.11.5"
unstructured = {extras = ["md"], version = "^0.17.2"}
nltk = "^3.9.1"
langchain-text-splitters = "^0.3.8"
feedparser = "^6.0.11"
newspaper3k = "^0.2.8"
listparser = "^0.20"
lxml = {extras = ["html-clean"], version = "^5.4.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.6.0"
types-toml = "^0.10.8.7"
types-pillow = "^9.4.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "off"
